--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "he": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loading": "^2.0.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
